add simple_analyzer and singlews_analyzer